--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "pwa-chrome",
       "request": "launch",
       "preLaunchTask": "Serve Frontend",
-      "url": "http://localhost:4200/#",
+      "url": "http://localhost:4200",
       "webRoot": "${workspaceFolder}",
       "sourceMaps": true,
       "sourceMapPathOverrides": {
