--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,10 @@
   "configurations": [
     {
       "name": "Debug Frontend",
-      "type": "pwa-chrome",
+      "type": "chrome",
       "request": "launch",
       "preLaunchTask": "Serve Frontend",
-      "url": "http://localhost:4200",
+      "url": "http://localhost:4200/",
       "webRoot": "${workspaceFolder}",
       "sourceMaps": true,
       "sourceMapPathOverrides": {
