--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "crypto-js": "^4.1.1",
     "highcharts": "^10.3.3",
     "highcharts-angular": "^3.1.2",
+    "pdfmake": "^0.2.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -41,6 +42,7 @@
     "@types/crypto-js": "^4.1.1",
     "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~4.3.0",
+    "@types/pdfmake": "^0.2.2",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
